--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -944,8 +944,8 @@ metric tons (mt) between 1889 and 2024 for each fleet.}
 
 \begin{landscape}
 \begingroup
-\setlength\LTleft{0.1\linewidth}
-\setlength\LTright{0.1\linewidth}\fontsize{9.0pt}{10.8pt}\selectfont
+\setlength\LTleft{0.2\linewidth}
+\setlength\LTright{0.2\linewidth}\fontsize{9.0pt}{10.8pt}\selectfont
 
 \begin{longtable}{@{\extracolsep{\fill}}rrrrrrrrr}
 
@@ -2969,8 +2969,8 @@ Reconstruction (1979-2000).''} ODFW Science Bulletin 2024-09.
 
 \caption{\label{tbl-ye-management}Recent trend in the overfishing limits
 (OFL), the acceptable biological catches (ABCs), the annual catch limits
-(ACLs), and the total dead catch (landings + discards) all in metric
-tons (mt).}
+(ACLs), and the total dead catch (landings + discards) in metric tons
+(mt).}
 
 \tabularnewline
 
