no more model output at beginning

--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -141,9 +141,11 @@ projections_table[1:2, "Adopted ACL (mt)"] <- GMT016 |>
 ```
 
 ```{r}
+#| eval: true
 #| warning: false
 #| echo: false
 #| message: false
+#| results: "hide"
 
 # produce catch_table
 
