--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -365,6 +365,7 @@ Recent trends in total catch relative to management guidelines is available in @
 #| tbl-cap: "Recent trend in the overfishing limits (OFL), the acceptable biological catches (ABCs), the annual catch limits (ACLs), and the total dead catch (landings + discards) all in metric tons (mt)."
 #| tbl-pos: H
 
+cat("\\begin{landscape}\n")
 
 recent_management_table |>
    gt::gt() |>
@@ -373,6 +374,9 @@ recent_management_table |>
      latex.use_longtable = TRUE
    ) |>
    gt::as_latex()
+
+cat("\n\\end{landscape}\n")
+
 # changed to csv file until r4ss gets fixed
 
 #yelloweye_management <- read.csv("tables/yelloweye_management.csv")
