pushing recent render, close, but still some tables over

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -521,6 +521,7 @@ metric tons (mt) between 1889 and 2024 for each fleet.}
 \clearpage
 
 \begin{landscape}
+\begin{flushleft}
 \begingroup
 \setlength\LTleft{0.2\linewidth}
 \setlength\LTright{0.2\linewidth}\fontsize{9.0pt}{10.8pt}\selectfont
@@ -550,6 +551,7 @@ Year & CA TWL (mt) & CA NONTWL (mt) & CA REC (mt) & ORWA TWL (mt) & ORWA NONTWL 
 \end{longtable}
 
 \endgroup
+\end{flushleft}
 
 \end{landscape}
 
@@ -925,6 +927,7 @@ This section will be updated after SSC GFSC review.
 
 \clearpage
 
+\begin{landscape}
 \begingroup
 \fontsize{9.0pt}{10.8pt}\selectfont
 
@@ -957,6 +960,8 @@ Year & Adopted OFL (mt) & Adopted ACL (mt) & Assumed Catch (mt) & OFL (mt) & Buf
 \end{longtable}
 
 \endgroup
+
+\end{landscape}
 
 \clearpage
 
@@ -3663,6 +3668,7 @@ Year & Total Biomass (mt) & Spawning output & Total Biomass 8+ (mt) & Fraction U
 \newpage{}
 
 \begin{landscape}
+\begin{flushleft}
 \begingroup\fontsize{9}{11}\selectfont
 
 \begin{longtable}[t]{ll>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}}
@@ -3702,6 +3708,7 @@ Label & Base & - CA REC & - OR REC & - WA REC & - CA CPFV & - ORFS & - Triennial
 
 \endgroup{}
 
+\end{flushleft}
 
 \end{landscape}
 
@@ -3798,6 +3805,7 @@ Label & Base & - CA CPFV & - ORFS & - Triennial & - WCGBTS & - IPHC & No length 
 \newpage{}
 
 \begin{landscape}
+\begin{flushleft}
 \begingroup\fontsize{9}{11}\selectfont
 
 \begin{longtable}[t]{ll>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}>{\raggedright\arraybackslash}p{4em}}
@@ -3837,6 +3845,7 @@ Label & Base & - CA NONTWL & - CA REC & - ORWA TWL & - ORWA NONTWL & - OR REC & 
 
 \endgroup{}
 
+\end{flushleft}
 
 \end{landscape}
 
@@ -4139,7 +4148,7 @@ model fit for the NWFSC West Coast Groundfish Bottom Trawl Survey
 
 \centering{
 
-\includegraphics{figures/indices/wcgbts_index_comparison.png}
+\includegraphics[width=1\textwidth,height=\textheight]{figures/indices/wcgbts_index_comparison.png}
 
 }
 
